# Aethelgard

./: Block.cpp  Block.hpp  BlockchainStorage.cpp  CMakeLists.txt  Transaction.cpp  Transaction.hpp  Utils.cpp
include/: BlockHeader.hpp  BlockchainStorage.hpp  Message.hpp  P2PNode.hpp  Peer.hpp  PeerConnection.hpp  PeerManager.hpp  Transaction.hpp  Utils.hpp
src/: Block.cpp  BlockHeader.cpp  Message.cpp  P2PNode.cpp  PeerConnection.cpp  PeerManager.cpp  SignatureManager.cpp  Transaction.cpp  Utils.cpp  main.cpp
test/: AddressManager.cpp  AddressManager.hpp  Block.cpp  Block.hpp  BlockHeader.cpp  BlockHeader.hpp  BlockchainStorage.cpp  BlockchainStorage.hpp  Consensus.hpp  CryptoBase.cpp  CryptoBase.hpp  KeyManager.cpp  KeyManager.hpp  Makefile  Message.cpp  Message.hpp  P2PNode.cpp  P2PNode.hpp  PeerConnection.cpp  PeerConnection.hpp  PeerManager.cpp  PeerManager.hpp  ProofOfAuction.cpp  ProofOfAuction.hpp  Prueba-de-la-mejora.txt  SignatureManager.cpp  SignatureManager.hpp  Transaction.cpp  Transaction.hpp  Types.hpp  Utils.cpp  Utils.hpp  comandosCompilacionTest.txt  test.txt  testBlockClass  testBlockClass.cpp  testBlockHeaderClass  testBlockHeaderClass.cpp  testBlockchainStorageClass  testBlockchainStorageClass.cpp  (+18 more)
